--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,6 @@
 		<h2>My name is Kristine</h2>
 		<h3>I'm a third-year undergraduate studying Biochemistry</h3>
 		<h4>Here's a link to a YouTube video which is about DNA Replication</h4>
-		<h5>https://www.youtube.com/watch?v=TNKWgcFPHqw </h5>
+		<h5><iframe width="560" height="315" src="https://www.youtube.com/embed/TNKWgcFPHqw" frameborder="0" allowfullscreen></iframe> </h5>
 	</body>
 </html>	
