--- a/index4.html
+++ b/index4.html
@@ -10,7 +10,7 @@
 		<h4>Here's a link to a YouTube video which is about DNA Replication</h4>
 		<h5><iframe width="560" height="315" src="https://www.youtube.com/embed/TNKWgcFPHqw" frameborder="0" allowfullscreen></iframe> </h5>
 		<h6>And here's a map of my hometown, Shenyang, a city in the northeast part of China</h6>
-		<h7>https://www.google.com/maps/place/Shenyang,+Liaoning,+China/@41.8055009,123.1556276,10z/data=!3m1!4b1!4m5!3m4!1s0x5e253c413a1334b7:0x5499e4f0ce929166!8m2!3d41.805699!4d123.431472</h7>
+		<h7><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380679.48395172594!2d123.1556276245118!3d41.805500865768046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5e253c413a1334b7%3A0x5499e4f0ce929166!2sShenyang%2C+Liaoning%2C+China!5e0!3m2!1sen!2sus!4v1484017727388" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></h7>
 		
 		
 	</body>
