--- a/MyFunSite.html
+++ b/MyFunSite.html
@@ -5,12 +5,12 @@
 
 	</head>
 	<body style="background-color: pink">
-		<h1>Hello World! Welcome to Kristine Sun's site</h1>
+		<h1 style="font-size:250%;">Hello World! Welcome to Kristine Sun's site</h1>
 		<h2>About Me!</h2>
 		<p>I grew up from a city in the Northeast part of China named Shenyang</p>
 		<p>I'm a third-year undergraduate studying Biochemistry and Biology at UW</p>
 
-		<h2>My Favoriate Sites:)</h2>
+		<h2 style="font-size:160%;">My Favoriate Sites:)</h2>
 		<ul>
 			<li>
 				<a href="https://www.youtube.com/"> YouTube</a>
@@ -22,15 +22,31 @@
 				<a href="https://www.facebook.com/">Facebook</a>
 			</li>
 		</ul>
+		
 
-
-		<h2>My Favoriate Picture:)</h2>
+		<h2 style="font-size:160%;">My Favoriate Pictures:)</h2>
 		<a href="https://www.pinterest.com/janhummell/cats/">	
+			<img src="https://s-media-cache-ak0.pinimg.com/originals/2b/7d/3b/2b7d3bf55872527215c0a38e2ddcd9a0.jpg" style="float:left;width:50px;height:50px;">
 			<img src="https://s-media-cache-ak0.pinimg.com/originals/2b/7d/3b/2b7d3bf55872527215c0a38e2ddcd9a0.jpg">
+
+			<img src="https://s-media-cache-ak0.pinimg.com/736x/27/cf/cd/27cfcd2fefc4db6d3de473e3f7c7f00b.jpg">
+			<img src="https://s-media-cache-ak0.pinimg.com/736x/27/cf/cd/27cfcd2fefc4db6d3de473e3f7c7f00b.jpg" style="float:left;width:50px;height:50px;">
 		</a>
 
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/G8KpPw303PY" frameborder="0" allowfullscreen></iframe>
-		<p>I'm a cat person :D</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjfnpKI4r_RAhXKjlQKHTG4AMEQjRwIBw&url=https%3A%2F%2Fwww.pinterest.com%2Fexplore%2Fcats%2F&bvm=bv.144224172,d.cGw&psig=AFQjCNGViwySQ0l7iF4omCC--4rHZJFknA&ust=1484419050019490embed/G8KpPw303PY" frameborder="0" allowfullscreen></iframe>
+
+			<p>I'm a cat person:D</p>
+			<p>For more cute cat pictures, just click on my pictures:) </p>
+
+
+			<!DOCTYPE html>
+			<html>
+				<head>
+		 			<link rel="stylesheet" type="text/css" href="theme.css">
+		 		</head>
+		 		<body>
+				<h1> 
+
 
 		<h2>To message Kristine</h2>
 		<form>
