--- a/someCss.html.html
+++ b/someCss.html.html
@@ -30,14 +30,15 @@
 			<img src="https://s-media-cache-ak0.pinimg.com/originals/2b/7d/3b/2b7d3bf55872527215c0a38e2ddcd9a0.jpg">
 			
 			<img src="https://s-media-cache-ak0.pinimg.com/736x/27/cf/cd/27cfcd2fefc4db6d3de473e3f7c7f00b.jpg"
-				rcorners1 {
+				rcorners {
     				border-radius: 20px;
+    				border: 2px
     				padding: 20px; 
    					width: 200px;
     				height: 200px; 
     			}
     		>
-			<img src="https://s-media-cache-ak0.pinimg.com/736x/27/cf/cd/27cfcd2fefc4db6d3de473e3f7c7f00b.jpg" style="float:left;width:50px;height:50px;">
+			<img src="https://s-media-cache-ak0.pinimg.com/736x/27/cf/cd/27cfcd2fefc4db6d3de473e3f7c7f00b.jpg" style="float:right;width:50px;height:50px;">
 		</a>
 
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/cbP2N1BQdYc" frameborder="0" allowfullscreen></iframe>" 
