--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -16,13 +16,12 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL7dP4vF9WhRJy2DYxg6phZi2BuAB3QVjS" frameborder="0" allowfullscreen></iframe>
 		
 		
-
-
-		<object width="400" height="400" data="[live.@.SNL(2009.11.7)-GodsEyes.-.GodsEyes.Net">
+		<object width="300" height="300" 
+				src="[live.@.SNL(2009.11.7)-GodsEyes.-.GodsEyes.TaylorNet">
 		</object>
 		
-		<video width="30" height="200" controls>
-  			<source src="live.@.SNL(2009.11.7)-GodsEyes.-.GodsEyes.Net" type="video/mp4">
+		<video width="300" height="300" 
+  				src="https://www.youtube.com/embed/cbP2N1BQdYc" frameborder="0" allowfullscreen>
 		</video>
 		
 		<h6>And here's a map of my hometown, Shenyang, a city in the northeast part of China</h6>
